--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -77,13 +77,17 @@ footer .footer-contents {
   font-weight: bold;
 }
 /* CAM'S CODE */
-.loading-screen {
+.lobby-screen {
   background-color: rgba(248, 247, 216, 0.7);
   position: absolute;
   top: 62px;
   left: 0;
   width: 600px;
   height: 600px;
+}
+.generic {
+  position: absolute;
+  z-index: 100;
 }
 .countdown {
   position: absolute;
@@ -96,6 +100,13 @@ footer .footer-contents {
   top: 150px;
   width: 250px;
   height: 60px;
+}
+.player-names {
+  position: absolute;
+  text-align: center;
+  font-size: 20px;
+  width: 120px;
+  height: 30px;
 }
 .middle-line {
   background-color: black;
@@ -116,6 +127,14 @@ footer .footer-contents {
   position: absolute;
   width: 15%;
   height: 15%;
+}
+.late-message {
+  position: absolute;
+  display: none;
+  top: 150px;
+  left: 300px;
+  text-align: center;
+  z-index: 102;
 }
 /* CAM'S CODE */
 
